# deteccao_fraude

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
docs/: Makefile  api.py  conf.py  index.rst  make.bat  preprocessing.py
notebooks/: base_fraud_reduz.pkl  c0.1-vj-data-description.ipynb  c0.2-vj-data-description copy.ipynb  c0.2-vj-data-description.ipynb  c0.2-vj-feature-engineering.ipynb  c0.3-vj-filtragem-variaveis copy.ipynb  c0.3-vj-filtragem-variaveis.ipynb  c0.4-vj-analise e visulização copy.ipynb  c0.4-vj-analise e visulização.ipynb  c0.4-vj-analise_visualalizacoes.ipynb  c0.5-vj-preparacao-dos-dados.ipynb  c0.6-vj-secao de featrures.ipynb  c0.7-vj-modelar_algo_ML.ipynb  c0.8-vj-ajuste_hiperparametro.ipynb  deteccao_fraude.ipynb  teste.ipynb
notebooks/teste/: c0.8-vj-ajuste_hiperparametro (1).ipynb  c0.8-vj-ajuste_hiperparametro.ipynb  c0_8_vj_ajuste_hiperparametro.ipynb
src/: Valmir.py  config.py  div_train_test.py  json_rename.json  load_dataset.py  main.py  model.py  new_feature_maior.py  new_feature_poder_compra.py  new_feature_tipo_cliente.py  padronizar_data.py  rename_columns.py  requirements.txt  transforma_labelencond.py
src/data/: divisao.py  load.py  padronizacao.py  renomear.py  transformacao.py
src/features/: new_maior_50.py  new_poer_compra.py  new_tipo_cliente.py  rename.py
src/models/: xgboost.pkl
src/parameter/: lb_maior_50.pkl  rs_passos.pkl  rs_quantia.pkl  rs_saldo_orig_inicial.pkl  rs_saldoinicialdest.pkl
src/preprocessing/: teste.py
src/preprocessing/sistema/: media.py
